fix images for tcgplayer
